--- a/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/GeoQuiz/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="cheat_button">Cheat!</string>
     <string name="judgment_toast">Cheating is wrong.</string>
     <string name="api_level">API Level: %1$d</string>
+    <string name="remaining_cheats">Cheats left: %1$d</string>
 </resources>
